# app-accounting

./: CMakeLists.txt  README  README.md  acc_bash  acc_preload.c  exec_testing.c  json_output.c  json_output.h  output.c  output.h  server.c  server.h  symbols.h  wrapper.c  xml.c  xml_output.c  xml_output.h
cmake/: FindLibYAML.cmake
src/: CMakeLists.txt  acc_bash.c  acc_preload.c  exec_testing.c  server.c  server.h  wrapper.c  xml.c
src/cmake/: FindZeroMQ.cmake
